--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Flow - PoC</h1>
   <div>
-    <canvas id="canv" width="500" height="500"></canvas>
+    <canvas id="world" width="500" height="500"></canvas>
   </div>
 </body>
 </html>
